--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Run my own container action
         id: hello-action
-        uses: ./action
+        uses: ./
         with:
           who-to-greet: '@wulfland'
 
